services/infrastructure/k8s/authentication-mongo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authentication-mongo-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authentication-mongo
  template:
    metadata:
      labels:
        app: authentication-mongo
    spec:
      containers:
      - name: authentication-mongo
        image: mongo
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: authentication-mongo-service
spec:
  selector:
    app: authentication-mongo
  ports:
  - name: authentication-mongo-db
    protocol: TCP
    port: 27017
    targetPort: 27017
