services/infrastructure/k8s/order-mongo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-mongo-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-mongo
  template:
    metadata:
      labels:
        app: order-mongo
    spec:
      containers:
      - name: order-mongo
        image: mongo
        # resources:
        #   limits:
        #     memory: "128Mi"
        #     cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: order-mongo-service
spec:
  selector:
    app: order-mongo
  ports:
  - name: order-mongo-db
    protocol: TCP
    port: 27017
    targetPort: 27017
